# XenseTeleop

./: .gitignore  README.md  pyproject.toml  setup.sh  setup_conda.sh
assets/arx/X5/: dual_X5A.urdf  dual_X5A.xml  dual_X5A_EE.xml  dual_X5A_EE_scene.xml  dual_X5A_fixed.urdf  scene.xml
dependencies/X5/X5A/urdf/: X5A.urdf  X5A_with_ee.urdf
result/: bimanual_X5A_EE_ground.urdf  bimanual_X5A_EE_root.urdf
scripts/hardware/: teleop_arx_hardware.py  teleop_dual_arx_r5_hardware.py
scripts/misc/: test_data_log_analysis.py
scripts/simulation/: teleop_dual_a1x_mujoco.py  teleop_dual_ur5e_mujoco.py  teleop_dual_x5_mujoco.py  teleop_dual_x5a_mujoco.py  teleop_x5_placo.py  teleop_x7s_placo.py
scripts/visualization/: rs_cam_streaming.py
xenseteleop_toolkit/common/: base_hardware_teleop_controller.py  base_teleop_controller.py
xenseteleop_toolkit/hardware/: arx_r5_teleop_controller.py  arx_x5_teleop_controller.py  galaxea_r1_lite_teleop_controller.py
xenseteleop_toolkit/hardware/interface/: arx_r5.py  arx_x5.py  universal_robots.py
xenseteleop_toolkit/simulation/: mujoco_teleop_controller.py  placo_teleop_controller.py
xrobotoolkit_teleop/common/: base_teleop_controller.py
xrobotoolkit_teleop/hardware/: arx_x5_teleop_controller.py
xrobotoolkit_teleop/hardware/interface/: arx_x5.py
xrobotoolkit_teleop/simulation/: mujoco_teleop_controller.py
xrobotoolkit_teleop/utils/: path_utils.py
