[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xenseteleop_toolkit"
version = "1.0.3"
description = "Teleoperation demo with MuJoCo and ARX X5 robot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vertax42", email = "yaphetys@gmail.com"}
]
dependencies = [
    "mujoco",
    "numpy",
    "meshcat",
    "placo",
    "ur_rtde",
    "dynamixel-sdk",
    "rospkg",
    "torch",
    "dex_retargeting",
    "pyrealsense2",
    "opencv-python",
    "tyro",
]

[project.optional-dependencies]
dev = [
    "black",
]

[tool.setuptools]
packages = ["xenseteleop_toolkit"]

[tool.setuptools.package-data]
xenseteleop_toolkit = ["../assets/**/*"]

[tool.black]
line-length = 120
